# Qt-VTK-viewer

./: CMakeLists.txt  scenewidget.cpp  scenewidget.h
